# playground

./: .gitignore  readme.md
.github/workflows/: learn-github-actions.yml
android/birth/: settings.gradle
android/birth/app/: build.gradle
dart/console/: pubspec.yaml
dart/console/test/: all_test.dart  intro.dart  lib_test.dart
dart/tutorials/: README.md
flutter/: readme.md
flutter/read-flutter-apprentice/: readme.md
flutter/read-flutter-apprentice/02-recipes/: pubspec.yaml
flutter/read-flutter-apprentice/03-fooderlich/: pubspec.yaml
flutter/sample/: README.md  pubspec.yaml
flutter/sample/lib/: main.dart  (+1 more)
go/embedded116/: go.mod  main.go  readme.md
go/gh-actions/: go.mod  math.go  math_test.go
kotlin/kmm/: build.gradle.kts  gradle.properties  settings.gradle.kts
lua/: hello.lua
nvim/nvchad/: Dockerfile  chad
rust/: readme.md
rust/book/: readme.md
rust/cargo/: readme.md
rust/lists/: .vimspector.json  Cargo.toml  readme.md
rust/min-redis/: Cargo.toml  readme.md
rust/rbe/: Cargo.toml  build.rs  readme.md
rust/rustdoc/: readme.md
rust/webser/: Cargo.toml  readme.md
swift/5.6/: Package.swift  readme.md
swift/hello/: Package.swift
swift/ui/: readme.md
tauri/: readme.md
tauri/faster-loop/: readme.md
tauri/faster-loop/be/: Cargo.toml  api.http
tauri/faster-loop/be/src/: main.rs
tauri/timer/: .gitignore  index.html  package.json  pnpm-lock.yaml  readme.md  tailwind.config.cjs  vite.config.ts.timestamp-1659534887165.mjs
ui/electron/: main.js  package-lock.json  package.json
web/vue3/: readme.md
xamarin/x1/: x1.sln
(+340 files in other folders)
